hot-start/kubernetes/operator/virtualservice-template.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: "{name}"
  labels:
    svc-related: "{host}"
    related-to: "{app_name}"
spec:
  hosts:
    - "*"
  gateways:
    - dt-gateway
  http:
  - match:
    - uri:
        prefix: /updates
      gateways:
        - dt-gateway
    route:
      - destination:
          host: "{host}"
          port:
            number: {port}
